@@ -1,5 +1,8 @@
 2012-10-29  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
+	* filter.c:
+	    Clean filter parser.
+
 	* aprx.c:
 	    Acquire a lock on pid-file, and keep the file open.
 
